Closed Bug 568404 Opened 15 years ago Closed 15 years ago

NS_DEACTIVATE not sent; unfocus issue with iframes in noautohide panels

Categories

(Core :: Widget: Gtk, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla2.0b1

People

(Reporter: karlt, Assigned: karlt)

References

Details

Attachments

(1 file)

STR with attachment 447406 [details] [diff] [review] for bug 568101: 1. Save attachment 410702 [details] to a local file "paneltest-simple.xul". 2. (Check that it looks safe to run as chrome.) 3. firefox -chrome paneltest-simple.xul 4. Click on "Panel Button noautohide". (A panel opens.) 5. Click on the text input (below "Hello") in the iframe in the panel. 6. Focus the parent window. (Text input appears focused.) 7. Focus a window in another app. Expected results: the text input loses its focus appearance. Actual results: the text input still looks focused. OnContainerFocusOutEvent is currently only sending NS_DEACTIVATE if gFocusWindow is a child of the container widget in the previously active parent window. That test fails because gFocusWindow is in a different toplevel window.
Attachment #447681 - Attachment description: don't make NS_DEACTIVATE dispatch conditional on gFocusWindow being in the same toplevel window r?enndeakin → don't make NS_DEACTIVATE dispatch conditional on gFocusWindow being in the same toplevel window
Attachment #447681 - Flags: review?(enndeakin)
Attachment #447681 - Flags: review?(enndeakin) → review+
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.3a6
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: