b=568404 don't make NS_DEACTIVATE dispatch conditional on gFocusWindow being in the same toplevel window r=enndeakin